[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prophet-sdk"
version = "0.2.0"
description = "Python SDK for the Prophet API — flows, deployments, nodes, and provisioning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{ name = "Prophet", email = "support@prophetic.ai" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
keywords = ["prophet", "network", "flow", "search", "api", "sdk"]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://prophetic.ai/"
Documentation = "https://prophetic.ai/"
Source = "https://github.com/PropheticAI/sdk"
Issues = "https://github.com/PropheticAI/sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.23.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"prophet.sdk" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
